--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "node_modules/.bin/jest --passWithNoTests"
   },
   "dependencies": {
+    "@babel/plugin-syntax-bigint": "^7.8.3",
+    "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.11.4",
@@ -18,33 +21,44 @@
     "@react-navigation/stack": "^5.12.8",
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
+    "big-integer": "^1.6.49",
     "expo": "^42.0.0",
     "expo-asset": "~8.3.3",
     "expo-barcode-scanner": "~10.2.2",
     "expo-cli": "^4.11.0",
     "expo-font": "~9.2.1",
+    "formik": "^2.2.9",
     "global": "^4.4.0",
     "moment": "^2.24.0",
+    "native-base": "3.2.1.rc-1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-moment": "^1.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-camera": "^4.1.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-pager-view": "5.0.12",
     "react-native-permissions": "^3.0.5",
     "react-native-qrcode-scanner": "^1.5.4",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
+    "react-native-scalable-image": "^1.1.0",
     "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "tailwind-rn": "^3.0.1"
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.1",
+    "styled-system": "^5.1.5",
+    "tailwind-rn": "^3.0.1",
+    "whatwg-url": "^10.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
