--- a/app.json
+++ b/app.json
@@ -1,21 +1,15 @@
 {
   "expo": {
-    "name": "react-native-boilerplate",
-    "slug": "react-native-boilerplate",
+    "name": "MySejahtera",
+    "slug": "MySejahtera",
     "privacy": "public",
     "platforms": [
-      "ios",
       "android",
       "web"
     ],
-    "version": "1.0.0",
+    "version": "1.4.10",
     "orientation": "portrait",
-    "icon": "./assets/images/logo-sm.png",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
+    "icon": "./assets/images/login-logo.png",
     "updates": {
       "fallbackToCacheTimeout": 0
     },
@@ -34,6 +28,10 @@
         "ts",
         "tsx"
       ]
-    }
+    },
+    "android": {
+      "package": "com.cva.ha.mysej"
+    },
+    "description": ""
   }
 }
