--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "^42.0.0",
     "expo-asset": "~8.3.3",
     "expo-barcode-scanner": "~10.2.2",
+    "expo-camera": "~11.2.2",
     "expo-cli": "^4.11.0",
     "expo-font": "~9.2.1",
     "formik": "^2.2.9",
@@ -55,6 +56,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "scroll-data-hook": "^1.0.4",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
     "tailwind-rn": "^3.0.1",
